=== WebCore-419.2.3 ===

2007-10-15  Mark Rowe  <mrowe@apple.com>

        Roll out r25691, the merge of r24938 and r24946.

=== WebCore-419.2.2 ===

2007-10-11  Mark Rowe  <mrowe@apple.com>

        Merge remainder of r12652 from trunk to Safari-2.0-dashboard.  This portion
        was missed during the merge in r25550.

        * kwq/KWQTextCodec.mm:
        (KWQTextDecoder::appendOmittingBOMs):
        (KWQTextDecoder::convertUsingTEC):

2007-10-09  Tristan O'Tierney  <tristan@apple.com>

        Reviewed by Sam Weinig.

        Merge r25249 and r25284 from ToT to Safari-2.0-dashboard.
        This time with a fix for <rdar://problem/5531129>.
        
    2007-08-24  Sam Weinig  <sam@webkit.org>

            Reviewed by Adele.

            Fix for <rdar://problem/5426142>

            Use the EventTarget's frame when creating the EventListener.

            Tests: http/tests/security/listener/xss-JSTargetNode-onclick-addEventListener.html
                   http/tests/security/listener/xss-JSTargetNode-onclick-shortcut.html
                   http/tests/security/listener/xss-window-onclick-addEventListener.html
                   http/tests/security/listener/xss-window-onclick-shortcut.html

            * bindings/js/JSEventTargetNode.cpp:
            (WebCore::JSEventTargetNode::setListener):
            (WebCore::JSEventTargetNodePrototypeFunction::callAsFunction):
            * bindings/js/kjs_window.cpp:
            (KJS::WindowFunc::callAsFunction):
                
    2007-08-28  Sam Weinig  <sam@webkit.org>

            Reviewed by Darin.

            Update fix landed in r25249 to account for XMLHttpRequest, which can also be EventTargets.

            Tests: http/tests/security/listener/xss-XMLHttpRequest-addEventListener.html
                   http/tests/security/listener/xss-XMLHttpRequest-shortcut.html

            * bindings/js/JSXMLHttpRequest.cpp: